--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,4 @@ fabric_version=0.44.0+1.18
 ae2_version=10.0.0-alpha.7
 cloth_config_version=6.0.42
 energy_version=2.0.0-beta1
+wthit_version=4.1.2
