for tech reborn

--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,12 @@ repositories {
         name = "CottonMC"
         url = "https://server.bbkr.space/artifactory/libs-release"
     }
+    maven {
+        url "https://cursemaven.com"
+        content {
+            includeGroup "curse.maven"
+        }
+    }
 }
 
 dependencies {
@@ -65,6 +71,9 @@ dependencies {
     }
 
     include modImplementation("teamreborn:energy:${project.energy_version}")
+
+    modRuntimeOnly("curse.maven:techreborn-233564:3553653")
+    modRuntimeOnly("curse.maven:reborncore-237903:3553654")
 
     // PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
     // You may need to force-disable transitiveness on them.
