--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,6 @@ archives_base_name=AE2Things
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.44.0+1.18
-ae2_version=10.0.0
+ae2_version=10.1.0-beta.1
 cloth_config_version=6.0.42
 wthit_version=4.1.2
