--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           java-version: 17
       - name: Build
-        run: ./gradlew build
+        run: chmod +x ./gradlew build
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
