--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ archives_base_name=AE2Things
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.51.0+1.18.2
-ae2_version=11.0.0-alpha.5
+ae2_version=11.0.0
 cloth_config_version=6.0.42
 rei_version=8.0.438
 wthit_version=4.8.0
