--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.18.2
-loader_version=0.13.3
+minecraft_version=1.19
+loader_version=0.14.8
 # Mod Properties
 mod_version=1.1.0-beta.7
 maven_group=io.github.projectet
 archives_base_name=AE2Things
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.51.0+1.18.2
-ae2_version=11.0.0
-cloth_config_version=6.0.42
-rei_version=8.0.438
-wthit_version=4.8.0
+fabric_version=0.57.0+1.19
+ae2_version=12.0.0-alpha
+cloth_config_version=7.0.69
+rei_version=9.1.503
+wthit_version=5.5.1
