--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,17 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19
-loader_version=0.14.8
+minecraft_version=1.19.2
+loader_version=0.14.11
 # Mod Properties
-mod_version=1.1.0-beta.8
+mod_version=1.1.0-beta.9
 maven_group=io.github.projectet
 archives_base_name=AE2Things
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.57.0+1.19
-ae2_version=12.0.0-alpha
-cloth_config_version=7.0.69
-rei_version=9.1.503
-wthit_version=5.5.1
+fabric_version=0.68.0+1.19.2
+ae2_version=12.8.5
+architectury_version=6.3.56
+cloth_config_version=8.2.88
+rei_version=9.1.577
+wthit_version=5.13.4
