Remove 1024k and 4096k stuff, Update gradle, Fix screen handler registration

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19
+minecraft_version=1.19.2
 loader_version=0.14.8
 # Mod Properties
 mod_version=1.1.0-beta.8
@@ -10,8 +10,10 @@ maven_group=io.github.projectet
 archives_base_name=AE2Things
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.57.0+1.19
-ae2_version=12.0.2-alpha
-cloth_config_version=7.0.69
-rei_version=9.1.503
-wthit_version=5.5.1
+fabric_version=0.76.1+1.19.2
+ae2_version=12.9.8
+cloth_config_version=8.3.103
+arch_version=6.5.85
+rei_version=9.1.668
+wthit_version=5.9.0
+tr_energy_version=2.0.0-beta1
